# cfca

./: .gitignore  CMakeLists.txt  I-am-lazy.sh  readme
src/: CMakeLists.txt  gen-concepts.c
src/fca/: CMakeLists.txt
src/fca/easy/: fca.c
src/fca/vector/: fcaV.c
